--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,24 +1,13 @@
-<html>
-  <head>
-    <title>Mina's Blog</title>
-  </head>
-  <body>
-    <div>
-      <h1><a href="">Mina's Blog</a></h1>
-    </div>
+{% extends 'blog/base.html' %}
 
+{% block content %}
     {% for post in posts %}
-        <div>
-          <p>published: {{post.published_date}}</p>
-          <h1><a href="">{{post.title}}</a></h1>
-          <p>{{post.text|linebreaksbr}}</p>
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
-
-    <div>
-      <p>published: 16.09.2019, 14:23</p>
-      <h2><a href="">My second post</a></h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea perferendis atque, aut dolore! Quasi perferendis vero, alias tempora eum? Id sapiente, minus eum consequuntur et omnis tempora iusto consectetur assumenda.</p>
-    </div>
-  </body>
-</html>
+{% endblock %}
